--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 pageSize: 20
 spring:
   datasource:
-    druid:
-      url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
-      username: root
-      password: root
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
+    username: root
+    password: root
+    type: com.alibaba.druid.pool.DruidDataSource
   thymeleaf:
     prefix: classpath:/templates/
     check-template-location: true
@@ -16,7 +16,6 @@ spring:
     user:
       name: security_user1
       password: SeCuRiTy1234
-
 pagehelper:
   helper-dialect: mysql
   reasonable: true
