--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,6 @@ spring:
     encoding: UTF-8
     mode: LEGACYHTML5
     cache: false
-  security:
-    user:
-      name: security_user1
-      password: SeCuRiTy1234
 pagehelper:
   helper-dialect: mysql
   reasonable: true
@@ -29,7 +25,8 @@ mybatis:
     map-underscore-to-camel-case: true
 logging:
   file:
-    path: classpath:/log
-    name: blog.log
+    name: /logs/my.log
   level:
     root: debug
+server:
+  port: 8080
