--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,12 @@ blog:
     # 单位毫秒
     expire-in: 86400000
     secret-key: asuqwe124jvst29yr5gslnvui3
-    header: _jwt_header
   constants:
     page-size: 20
     index-blog-content-text-size: 40
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=GMT%2B8
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
